bee-common/bee-common-derive/tests/packable/fail/missing_tag_enum.stderr
error: All variants of an enum that derives `Packable` require a `#[packable(tag = ...)]` attribute.
  --> $DIR/missing_tag_enum.rs:14:5
   |
14 |     None,
   |     ^^^^
